syntax = "proto3";

package structure;

message RequestPayload {
    oneof payload {
        FetchMessage fetchMsg = 1;
        RenameMessage renameMsg = 2;
        OpenMessage openMsg = 3;
        CreateMessage createMsg = 4;
        MkdirMessage mkdirMsg = 5;
        RemoveMessage removeMsg = 6;
        CloseMessage closeMsg = 7;
        TruncateMessage truncateMsg = 8;
        FlushMessage flushMsg = 9;
        ReadMessage readMsg = 10;
        WriteMessage writeMsg = 11;
        AttrMessage attrMsg = 12;
        ReadDirMessage readDirMsg = 13;
        SetModeMessage setModeMsg = 14;
        SetMtimeMessage setMtimeMsg = 15;
    }
}

message ReplyPayload {
    oneof payload {
        ErrMessage errMsg = 1;
        DataMessage dataMsg = 2;
        WriteOkMessage writeOkMsg = 3;
        FileInfoMessage fileInfoMsg = 4;
        FileInfosMessage fileInfosMsg = 5;
    }
}

message Request {
    uint64 id = 1;
    uint32 payloadType = 2;
    RequestPayload payload = 3;
}

message Reply {
    uint64 id = 1;
    uint32 payloadType = 2;
    ReplyPayload payload = 3;
}

message ErrMessage {
    string error = 1;
}

message FetchMessage {
    string path = 1;
}

message DataMessage {
    bytes data = 1;
}

message RenameMessage {
    string currentPath = 1;
    string newPath = 2;
}

message OpenMessage {
    uint64 fd = 1;
    string path = 2;
    uint32 flags = 3;
}

message CreateMessage {
    uint64 fd = 1;
    string baseDir = 2;
    string name = 3;
}

message MkdirMessage {
    string baseDir = 1;
    string name = 2;
}

message RemoveMessage {
    string path = 1;
    bool isDir = 2;
}

message CloseMessage {
    uint64 fd = 1;
}

message TruncateMessage {
    string path = 1;
    uint64 size = 2;
}

message FlushMessage {
    uint64 fd = 1;
}

message ReadMessage {
    uint64 fd = 1;
    uint64 offset = 2;
    uint64 size = 3;
}

message WriteMessage {
    uint64 fd = 1;
    uint64 offset = 2;
    bytes data = 3;
}

message WriteOkMessage {
    uint64 size = 1;
    uint64 fileSize = 2;
}

message AttrMessage {
    string path = 1;
}

message FileInfoMessage {
    string name = 1;
    uint64 size = 2;
    uint32 mode = 3;
    uint64 mtime = 4;
    uint64 atime = 5;
    bool isDir = 6;
}

message ReadDirMessage {
    string path = 1;
}

message FileInfosMessage {
    repeated FileInfoMessage fileInfos = 1;
}

message SetModeMessage {
    string path = 1;
    uint32 mode = 2;
}

message SetMtimeMessage {
    string path = 1;
    uint64 mtime = 2;
    uint64 atime = 3;
}